infra/k8s/monitoring/headlamp/route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
spec:
  hostnames:
    - headlamp.atoca.house
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: atoca-house-internal
      namespace: kube-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: headlamp
          port: 4466
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
